--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "mongoose": "^8.1.0",
     "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
