--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "target": "ES2020",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true ,
+    "outDir": "dist"
   }
 }
